--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
   "version": "1.0.0",
   "description": "API for Education project",
   "main": "index.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
-    "start": "node ./dist/index.js"
+    "start": "node ./dist/main.js",
+    "build": "rm -Rf ./dist && tsc"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "4.17.2"
+    "express": "4.17.2",
+    "tslog": "^3.3.3"
   },
   "devDependencies": {
     "@types/express": "4.17.13"
