--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "4.17.2",
-    "tslog": "^3.3.3"
+    "inversify": "6.0.1",
+    "reflect-metadata": "0.1.13",
+    "tslog": "3.3.3"
   },
   "devDependencies": {
     "@types/express": "4.17.13"
