--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "type": "commonjs",
   "scripts": {
     "start": "node ./dist/main.js",
-    "build": "rm -Rf ./dist && tsc"
+    "build": "rm -Rf ./dist && tsc",
+    "lint": "eslint ./src/**",
+    "lint:fix": "eslint ./src/** --fix"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +19,13 @@
     "tslog": "3.3.3"
   },
   "devDependencies": {
-    "@types/express": "4.17.13"
+    "@types/express": "4.17.13",
+    "@typescript-eslint/eslint-plugin": "5.26.0",
+    "@typescript-eslint/parser": "5.26.0",
+    "eslint": "8.16.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "prettier": "2.6.2",
+    "typescript": "4.7.2"
   }
 }
