--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "commonjs",
   "scripts": {
     "start": "node ./dist/main.js",
+    "dev": "nodemon",
     "build": "rm -Rf ./dist && tsc",
     "lint": "eslint ./src/**",
     "lint:fix": "eslint ./src/** --fix"
@@ -25,7 +26,9 @@
     "eslint": "8.16.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
+    "nodemon": "2.0.16",
     "prettier": "2.6.2",
+    "ts-node": "10.8.0",
     "typescript": "4.7.2"
   }
 }
