add clinic & node inspect

--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "scripts": {
     "start": "node ./dist/main.js",
     "dev": "nodemon",
+    "dev:inspect": "nodemon -e ts,json --exec node --inspect=localhost:9222 -r ts-node/register src/main.ts",
     "build": "rm -Rf ./dist && tsc",
     "lint": "eslint ./src/**",
-    "lint:fix": "eslint ./src/** --fix"
+    "lint:fix": "eslint ./src/** --fix",
+    "clinic": "rm -Rf ./.clinic && clinic doctor --on-port 'autocannon -m POST localhost:8000/users/register' -- node dist/main.js"
   },
   "author": "",
   "license": "ISC",
