--- a/package.json
+++ b/package.json
@@ -11,30 +11,36 @@
     "build": "rm -Rf ./dist && tsc",
     "lint": "eslint ./src/**",
     "lint:fix": "eslint ./src/** --fix",
-    "clinic": "rm -Rf ./.clinic && clinic doctor --on-port 'autocannon -m POST localhost:8000/users/register' -- node dist/main.js"
+    "clinic": "rm -Rf ./.clinic && clinic doctor --on-port 'autocannon -m POST localhost:8000/users/register' -- node dist/main.js",
+    "generate": "prisma generate"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "1.20.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "dotenv": "^16.0.1",
     "express": "4.17.2",
     "inversify": "6.0.1",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "0.1.13",
     "tslog": "3.3.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@typescript-eslint/eslint-plugin": "5.26.0",
     "@typescript-eslint/parser": "5.26.0",
     "eslint": "8.16.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
-    "nodemon": "2.0.16",
+    "nodemon": "^2.0.19",
     "prettier": "2.6.2",
+    "prisma": "^4.0.0",
     "ts-node": "10.8.0",
     "typescript": "4.7.2"
   }
