--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "dev": "nodemon",
     "dev:inspect": "nodemon -e ts,json --exec node --inspect=localhost:9222 -r ts-node/register src/main.ts",
     "build": "rm -Rf ./dist && tsc",
+    "test": "jest",
+    "test:e2e": "jest --config jest.e2e.config.ts",
     "lint": "eslint ./src/**",
     "lint:fix": "eslint ./src/** --fix",
     "clinic": "rm -Rf ./.clinic && clinic doctor --on-port 'autocannon -m POST localhost:8000/users/register' -- node dist/main.js",
@@ -32,15 +34,20 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "4.17.13",
+    "@types/jest": "^28.1.6",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "5.26.0",
     "@typescript-eslint/parser": "5.26.0",
     "eslint": "8.16.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.0.0",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.19",
     "prettier": "2.6.2",
     "prisma": "^4.0.0",
+    "supertest": "^6.2.4",
+    "ts-jest": "^28.0.7",
     "ts-node": "10.8.0",
     "typescript": "4.7.2"
   }
